--- a/css/custom.css
+++ b/css/custom.css
@@ -740,6 +740,7 @@ a.fk-socialicon {
   text-align:center !important;
   font-size: 20px !important;
   font-weight:normal;
+  margin-bottom:0px !important;
  }
 #footerSUBSCRIBE p { 
   text-align:center !important;
