--- a/css/custom.css
+++ b/css/custom.css
@@ -735,6 +735,7 @@ a.fk-socialicon {
 -------------------------------------------------------------- */
 #footerSUBSCRIBE {
     background: #ffcc00;
+	padding: 20px 0px 20px 0px;
 }
 #footerSUBSCRIBE h3 { 
   text-align:center !important;
