--- a/css/custom.css
+++ b/css/custom.css
@@ -828,6 +828,7 @@ a.ucf-footer-nav,a.ucf-footer-nav:active,a.ucf-footer-nav:focus,a.ucf-footer-nav
 }
 a.ucf-footer-nav:active,a.ucf-footer-nav:focus,a.ucf-footer-nav:hover{
 	text-decoration:underline;
+	color:#ffcc00;
 }
 .ucf-social-icons .ucf-social-link.grey {
 	color: #3e3e3e;
