--- a/css/custom.css
+++ b/css/custom.css
@@ -964,6 +964,16 @@ ucf-footer-nav a{
 		max-width: 100% !important;
 		margin: 0px 0px 20px 0px !important;
 	}
+	article blockquote {
+		clear: both;
+		float: none;
+		display:block;
+		margin: 5px 30px 20px -40px;
+		padding-left: 0;
+		padding-top: 12px;
+		padding-bottom: 12px;
+		width: 100%;
+	}
 }	
 @media (max-width: 1200px) and (min-width: 768px)  {
     .lookingfor .evc-st-title {
