--- a/css/custom.css
+++ b/css/custom.css
@@ -965,15 +965,11 @@ ucf-footer-nav a{
 		margin: 0px 0px 20px 0px !important;
 	}
 	article blockquote {
-		clear: both;
 		float: none;
 		display:block;
-		margin: 5px 30px 20px 30px;
-		padding-left: 0;
-		padding-top: 12px;
-		padding-bottom: 12px;
+		margin: 5px 0px 20px 0px;
 		width: 100%;
-		color:red;
+		color:green;
 	}
 }	
 @media (max-width: 1200px) and (min-width: 768px)  {
