--- a/css/custom.css
+++ b/css/custom.css
@@ -484,7 +484,8 @@ article blockquote {
     width: 40%;
 }
 article blockquote p {
-  font-size: 20px;
+  	font-family: "Archer A","Archer B","UCF Slab Serif Alt",serif;
+	font-size: 20px;
     font-weight: 400;
     line-height: 1.4;
 }   
