--- a/css/custom.css
+++ b/css/custom.css
@@ -970,6 +970,7 @@ ucf-footer-nav a{
 		display:block;
 		margin: 5px 0px 20px 0px;
 		width: 100%;
+		text-align:center;
 	}
 }	
 @media (max-width: 1200px) and (min-width: 768px)  {
