--- a/css/custom.css
+++ b/css/custom.css
@@ -973,6 +973,9 @@ ucf-footer-nav a{
 		width: 100%;
 		text-align:center;
 	}
+	article .catlist-photo img {
+    	vertical-align: top;
+	}
 	.navigation ul {
 		padding-left:0px;
 		margin-bottom:25px;
