--- a/css/custom.css
+++ b/css/custom.css
@@ -966,6 +966,9 @@ ucf-footer-nav a{
 		max-width: 100% !important;
 		margin: 0px 0px 20px 0px !important;
 	}
+	.cat-border {
+		margin-right:15px;
+	}
 	article blockquote {
 		float: none;
 		display:block;
