--- a/css/custom.css
+++ b/css/custom.css
@@ -945,10 +945,13 @@ ucf-footer-nav a{
 }	
 /* = MAKE THINGS DISAPPEAR ON MOBILE
 -------------------------------------------------------------- */
-@media (max-width: 500px) {
+@media (max-width: 575px) {
 	.navbar-brand {
 		font-size: 11px !important;
 	}	
+	.cat-border {
+		margin-right:15px;
+	}
 }
 @media (max-width: 991px) {
 	.extraprofile, .profilesidebar, .hidemobile {
@@ -965,6 +968,9 @@ ucf-footer-nav a{
 	#imgRight-medium {
 		max-width: 100% !important;
 		margin: 0px 0px 20px 0px !important;
+	}
+	.cat-border {
+		margin-right:0px !important;
 	}
 	article blockquote {
 		float: none;
