--- a/css/custom.css
+++ b/css/custom.css
@@ -655,12 +655,12 @@ ul.personResearchList {
     flex: 0 0 20%;
   	max-width: 20%;
 }
-@media (max-width: 640px) {
+@media (max-width: 991px) {
 	.w-20 {
   		-webkit-box-flex: 0;
-      	-ms-flex: 0 0 33%,
-        flex: 0 0 33%,
-  		max-width: 33%;
+      	-ms-flex: 0 0 50% !important;
+        flex: 0 0 50% !important;
+  		max-width: 50% !important;
 	}
 }
 .UCFassistants {
