--- a/css/custom.css
+++ b/css/custom.css
@@ -650,9 +650,12 @@ ul.personResearchList {
 	margin-left: 0px !important;
 }
 .becomeGA {
-	float:right;
+	text-align:right;
+}
+.becomeGA a{
 	background:#f2f2f2;
 	border-radius: 5px !important;
+	padding:3px 10px;
 }
 .w-20 {
   	-webkit-box-flex: 0;
