--- a/css/custom.css
+++ b/css/custom.css
@@ -653,9 +653,10 @@ ul.personResearchList {
 	text-align:right;
 }
 .becomeGA a{
-	background:#f2f2f2;
+	background:#000;
 	border-radius: 5px !important;
 	padding:3px 10px;
+	color:#fff;
 }
 .w-20 {
   	-webkit-box-flex: 0;
