--- a/css/custom.css
+++ b/css/custom.css
@@ -539,6 +539,7 @@ article blockquote p {
     flex: 0 0 20%;
   	max-width: 20%;
 	margin-bottom:24px;
+	padding:0px 10px;
 }
 @media (max-width: 1200px) {
 	.person-20 {
