--- a/css/custom.css
+++ b/css/custom.css
@@ -530,7 +530,7 @@ article blockquote p {
 @media screen and (max-width: 992px) {
 	.listpersonG-pic {
 		width: 100%;
-		height:475px;
+		height:375px;
 	}
 }
 .person-20 {
@@ -549,7 +549,11 @@ article blockquote p {
   		max-width: 33% !important;
 	}
 }
-@media (max-width: 641px) {
+@media (max-width: 992px) {
+	.listpersonG-pic {
+		width: 100%;
+		height:225px;
+	}
 	.person-20 {
   		-webkit-box-flex: 0;
       	-ms-flex: 0 0 50% !important;
