--- a/css/custom.css
+++ b/css/custom.css
@@ -550,6 +550,14 @@ article blockquote p {
 	}
 	.person-20 {
   		-webkit-box-flex: 0;
+      	-ms-flex: 0 0 33% !important;
+        flex: 0 0 33% !important;
+  		max-width: 33% !important;
+	}
+}
+@media (max-width: 766px) {
+	.person-20 {
+  		-webkit-box-flex: 0;
       	-ms-flex: 0 0 50% !important;
         flex: 0 0 50% !important;
   		max-width: 50% !important;
