--- a/css/custom.css
+++ b/css/custom.css
@@ -515,10 +515,12 @@ article blockquote p {
   line-height:18px;
   font-size: 12px;
   text-align:center;
-  text-decoration:none !important;
 }
 .listpersonGroup:hover {
   background: #eee;
+}
+.listpersonGroup a {
+  text-decoration:none !important;
 }
 .listpersonGroup strong{
   font-weight:600;
