--- a/css/custom.css
+++ b/css/custom.css
@@ -537,8 +537,16 @@ article blockquote p {
 	margin-bottom:24px;
 	padding:0px 10px;
 }
+.person-4 {
+  	-webkit-box-flex: 0;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+  	max-width: 25%;
+	margin-bottom:24px;
+	padding:0px 10px;
+}
 @media (max-width: 1200px) {
-	.person-5 {
+	.person-5, .person-4 {
   		-webkit-box-flex: 0;
       	-ms-flex: 0 0 25% !important;
         flex: 0 0 25% !important;
@@ -549,7 +557,7 @@ article blockquote p {
 	.listpersonG-pic {
 		width: 100%;
 	}
-	.person-5 {
+	.person-5, .person-4 {
   		-webkit-box-flex: 0;
       	-ms-flex: 0 0 33% !important;
         flex: 0 0 33% !important;
@@ -557,7 +565,7 @@ article blockquote p {
 	}
 }
 @media (max-width: 766px) {
-	.person-5 {
+	.person-5, .person-4 {
   		-webkit-box-flex: 0;
       	-ms-flex: 0 0 50% !important;
         flex: 0 0 50% !important;
