--- a/css/custom.css
+++ b/css/custom.css
@@ -518,6 +518,7 @@ article blockquote p {
 }
 .listpersonGroup:hover {
   background: #eee;
+  text-decoration:none !important;
 }
 .listpersonGroup a:hover {
   text-decoration:none !important;
@@ -525,6 +526,7 @@ article blockquote p {
 .listpersonGroup strong{
   font-weight:600;
   font-size: 15px;
+  text-decoration:none !important;
 }
 .listpersonG-pic {
     height: 230px;
