--- a/css/custom.css
+++ b/css/custom.css
@@ -97,6 +97,10 @@ h2 {
 .nobullets li{
 	list-style:none;
 }
+.chpsAccordion h4{
+    font-size:18px !important;
+    font-weight:normal !important;
+}
 /* = Homepage Title
 -------------------------------------------------------------- */
 .mainHomeTitle .evc-st-title {
