--- a/css/custom.css
+++ b/css/custom.css
@@ -117,7 +117,7 @@ animation: flash 1s;
 }
 .archiveYellBTN {
 	font-size: 14px;
-	padding: 14px 20px 14px 20px;
+	padding: 15px 21px 15px 21px;
 	background-color:#ffcc00; 
 	color:#000000;
 	text-decoration:none !important;
@@ -127,6 +127,7 @@ animation: flash 1s;
     height: 14px;
     line-height: 14px !important;
 	margin-right:8px;
+	margin-top:1px;
 }
 /* = Homepage Title
 -------------------------------------------------------------- */
