--- a/css/custom.css
+++ b/css/custom.css
@@ -856,6 +856,20 @@ ul.personResearchList {
 .profile-social-icon {
 	color: #fff !important;
 }
+.profileY-BTN {
+	font-size: 14px;
+	padding: 15px 21px 15px 21px;
+	background-color:#ffcc00; 
+	color:#000000;
+	text-decoration:none !important;
+}
+.profileY-BTN-icon { 
+    font-size: 16px !important;
+    height: 14px;
+    line-height: 14px !important;
+	margin-right:8px;
+	margin-top:1px;
+}
 /* = SOCIAL MEDIA ICONS
 -------------------------------------------------------------- */
 a.fb-socialicon {
