--- a/css/custom.css
+++ b/css/custom.css
@@ -863,6 +863,10 @@ ul.personResearchList {
 	color:#000000;
 	text-decoration:none !important;
 }
+.profileY-BTN:hover {
+    background: #cca12e !important;
+	color: #fff !important;
+}
 .profileY-BTN-icon { 
     font-size: 16px !important;
     height: 14px;
