--- a/css/custom.css
+++ b/css/custom.css
@@ -856,23 +856,26 @@ ul.personResearchList {
 .profile-social-icon {
 	color: #fff !important;
 }
-.profileY-BTN {
+.yellowLarge-BTN {
 	font-size: 14px;
 	padding: 15px 21px 15px 21px;
 	background-color:#ffcc00; 
 	color:#000000;
 	text-decoration:none !important;
 }
-.profileY-BTN:hover {
+.yellowLarge-BTN:hover {
     background: #cca12e !important;
 	color: #fff !important;
 }
-.profileY-BTN-icon { 
-    font-size: 16px !important;
-    height: 14px;
-    line-height: 14px !important;
-	margin-right:8px;
-	margin-top:1px;
+.blackLarge-BTN {
+	font-size: 14px;
+	padding: 15px 21px 15px 21px;
+	background-color:#000; 
+	color:#fff;
+	text-decoration:none !important;
+}
+.blackLarge-BTN:hover {
+    background: #404040 !important;
 }
 /* = SOCIAL MEDIA ICONS
 -------------------------------------------------------------- */
