--- a/css/custom.css
+++ b/css/custom.css
@@ -876,6 +876,7 @@ ul.personResearchList {
 }
 .blackLarge-BTN:hover {
     background: #404040 !important;
+	color: #fff !important;
 }
 /* = SOCIAL MEDIA ICONS
 -------------------------------------------------------------- */
