--- a/css/custom.css
+++ b/css/custom.css
@@ -51,10 +51,10 @@ h2 {
 	list-style: none;
 }
 #yellow-textlinks {
-	color: #fff;
+	color: #fff !important;
 }
 #yellow-textlinks a {
-	color: #fecb2f;
+	color: #fecb2f !important;
 	-o-transition:.2s;
 	-ms-transition:.2s;
 	-moz-transition:.2s;
