--- a/css/custom.css
+++ b/css/custom.css
@@ -530,7 +530,8 @@ article blockquote p {
 
 }
 .newsSearcher .searchandfilter ul li{
-	padding: 20px 0px !important;
+	padding: 0px 0px 15px 0px !important;
+	margin-bottom: 15px !important;
 }
 
 /* = RECENT LIST TEXT SHORTCODE 
