--- a/css/custom.css
+++ b/css/custom.css
@@ -533,6 +533,9 @@ article blockquote p {
 	padding: 0px 0px 15px 0px !important;
 	margin-bottom: 10px !important;
 }
+.newsSearcher .searchandfilter select {
+ width:100%; 
+}
 
 /* = RECENT LIST TEXT SHORTCODE 
 -------------------------------------------------------------- */
