--- a/css/custom.css
+++ b/css/custom.css
@@ -527,7 +527,7 @@ article blockquote p {
     line-height: 1.4;
 }   
 .newsSearcher .searchandfilter {
-
+	background: #f2f2f2;
 }
 .newsSearcher .searchandfilter ul li{
 	padding: 0px 0px 15px 0px !important;
