--- a/css/custom.css
+++ b/css/custom.css
@@ -526,7 +526,7 @@ article blockquote p {
     font-weight: 400;
     line-height: 1.4;
 }   
-.newsSearcher .searchandfilter {
+.newsSearcher {
 	background: #f2f2f2;
 }
 .newsSearcher .searchandfilter ul li{
