--- a/css/custom.css
+++ b/css/custom.css
@@ -527,7 +527,7 @@ article blockquote p {
     line-height: 1.4;
 }   
 .newsSearcher {
-	background: #f2f2f2;
+	
 }
 .newsSearcher .searchandfilter ul li{
 	padding: 0px 10px 15px 0px !important;
@@ -535,6 +535,7 @@ article blockquote p {
 }
 .newsSearcher .searchandfilter label {
     width: 100% !important;
+	font-size:18px;
  }
 .newsSearcher .searchandfilter select {
     width: 100% !important;
