--- a/css/custom.css
+++ b/css/custom.css
@@ -933,7 +933,7 @@ a.in-socialicon {
 a.fk-socialicon {
 	color: #ff0084;
 }
-a.fk-socialicon {
+a.em-socialicon {
 	color: #666;
 }
 #minisocial a:hover {
