twitter color change

--- a/css/custom.css
+++ b/css/custom.css
@@ -950,7 +950,7 @@ a.fb-socialicon {
 	color:#3b5998;
 }
 a.tw-socialicon {
-	color: #1da1f2;
+	color: #000;
 }
 a.yt-socialicon {
 	color: #ff0000;
