--- a/css/custom.css
+++ b/css/custom.css
@@ -752,7 +752,7 @@ article blockquote p {
 .authortext {
 	text-transform: uppercase;
 	font-size: 12px;
-	color: #777;
+	color: #595959;
 	margin-top: 20px;
 }
 #postIMG {
@@ -1297,7 +1297,7 @@ ucf-footer-nav a{
 .navigation li a:hover,
 .navigation li.active a,
 .navigation li.disabled {
-    background-color: #6FB7E9;
+    background-color: #165C8D;
     border-radius: 3px;
     cursor: pointer;
     padding: 12px;
@@ -1305,7 +1305,7 @@ ucf-footer-nav a{
 }
 .navigation li a:hover,
 .navigation li.active a {
-    background-color: #3C8DC5;
+    background-color: #0B3450;
 }	
 /* = MAKE THINGS DISAPPEAR ON MOBILE
 -------------------------------------------------------------- */
